# sentry-empower

./: .env.example  .gitignore  README.md  docker-compose.yml  nginx.conf
.github/workflows/: image.yml
docs/: README.md  backend-api-specification.md  backend-implementation-status.md  frontend-backend-integration.md  go-backend-implementation-guide.md  sentry-enhancement-recommendations.md  sentry-feature-flags-openfeature.md
express/: Dockerfile  db.js  instrument.js  package-lock.json  package.json  server.js  utils.js
flask/: Dockerfile  app.py  pyproject.toml  requirements.txt
flask/src/: db.py  main.py  utils.py
flask/src/queues/: email_subscribe.py  tasks.py
flask/src/test/: test_db.py  test_main.py  test_utils.py
laravel/: .env.example  Dockerfile  package.json
load-generator/: README.md  scripts.js
next/: Dockerfile
react/: Dockerfile  biome.json  build.sh  config-overrides.js  nginx.conf  package-lock.json  package.json
react/src/: index.css  index.js  instrument.js
react/src/actions/: index.js  types.js
react/src/components/: About.jsx  ButtonLink.jsx  Cart.jsx  Checkout.jsx  Complete.jsx  CompleteError.jsx  Employee.jsx  Footer.jsx  Home.jsx  Nav.jsx  NotFound.jsx  Product.jsx  ProductCard.jsx  Products.jsx  ProductsJoin.jsx  checkout.css  nplusone.jsx
react/src/reducers/: index.js
react/src/tests/: About.test.js  Actions.test.js  App.test.js  Cart.test.js  Checkout.test.js  Employee.test.js  Errors.test.js  Footer.test.js  Product.test.js  ProductCard.test.js  Products.test.js  Reducer.test.js  (+5 more)
ruby/: Dockerfile  Gemfile  main.rb
(+14 files in other folders)
