[project]
name = "empower-flask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.5.3",
    "flask>=3.1.2",
    "flask-caching>=2.3.1",
    "flask-cors>=6.0.1",
    "openai>=1.106.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "sentry-sdk>=2.37.0",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.12",
    "types-flask-cors>=6.0.0.20250809",
    "types-pytz>=2025.2.0.20250809",
    "types-requests>=2.32.4.20250809",
]
